Update and rename class_2.md to 2024-07-17-class-2.md

--- a/_posts/2024-07-17-class-2.md
+++ b/_posts/2024-07-17-class-2.md
@@ -4,8 +4,13 @@ title:      第二讲 书写“Hello World!”
 subtitle:   By_哔哩哔哩@瓜子920
 date:       2024-07-17
 author:     GZ
-header-img: img/post-bg-debug.png
-catalog: false
+header-img: img/post-bg-ios9-web.jpg
+catalog: true
+tags:
+    - iOS
+    - ReactiveCocoa
+    - 函数式编程
+    - 开源框架
 ---
 # 课程源码
 ## 源码
